--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,49 @@
-<ion-header>
+<!--
+  Generated template for the HomePage page.
+
+  See http://ionicframework.com/docs/components/#navigation for more info on
+  Ionic pages and navigation.
+-->
+<ion-header class="main-navigation">
+
   <ion-navbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
+    <ion-title>Home</ion-title>
+    <ion-buttons end>
+      <button ion-button icon-only>
+        <ion-icon name="nav_home"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
+
 </ion-header>
 
-<ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+
+<ion-content>
+  <div class="home-list money-exchange-section">
+    <h6 class="title">Money Exchange</h6>
+    <ion-img width="103" height="50" src="assets/images/img_money_exchange.png"></ion-img>
+  </div>
+  <div class="home-list money-transfer-section">
+    <h6 class="title">Money Transfer</h6>
+    <ion-img width="144" height="50" src="assets/images/img_money_transfer.png"></ion-img>
+  </div>
+  <div class="home-icons">
+    <h3 class="title">Pay Bills</h3>
+    <ion-grid>
+      <ion-row>
+        <ion-col>
+          <ion-img width="75" height="75" src="assets/images/circle-power-img.png"></ion-img>
+          <p class="circle-label">Airtime</p>
+        </ion-col>
+        <ion-col>
+          <ion-img width="75" height="75" src="assets/images/circle-cable-img.png"></ion-img>
+          <p class="circle-label">Cable</p>
+        </ion-col>
+        <ion-col>
+          <ion-img width="75" height="75" src="assets/images/circle-airtime-img.png"></ion-img>
+          <p class="circle-label">Power</p>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </div>
 </ion-content>
