--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -29,7 +29,7 @@
       <ion-label stacked>Password</ion-label>
       <ion-input type="password" name="password" placeholder="Password"></ion-input>
     </ion-item>
-    <button ion-button block>Sign In</button>
+    <button ion-button block (click)="doLogin()">Sign In</button>
   </form>
   <div class="link">
     <p>Don&#39;t have an account?&nbsp;<strong (click)="openSignupPage()">Sign up</strong></p>
