--- a/src/pages/account/account.html
+++ b/src/pages/account/account.html
@@ -4,15 +4,39 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
+<ion-header class="main-navigation">
 
   <ion-navbar>
-    <ion-title>account</ion-title>
+    <ion-title>Account</ion-title>
+    <ion-buttons end>
+      <button ion-button icon-only>
+        <ion-icon name="md-more"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-
+  <div class="sub-title">
+    <h3>Account Setting</h3>
+  </div>
+  <form id="accountSetting" class="auth-form">
+    <ion-item>
+      <ion-label stacked>Old Password</ion-label>
+      <ion-input type="password" name="oldPassword" placeholder="Old Password"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label stacked>New Password</ion-label>
+      <ion-input type="password" name="newPassword" placeholder="New Password"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label stacked>Confirm Password</ion-label>
+      <ion-input type="password" name="confirmPassword" placeholder="Confirm Password"></ion-input>
+    </ion-item>
+    <button ion-button block>Update Password</button>
+    <button type="button" ion-button block (click)="openCustomerDetail()">Update Customer</button>
+    <button type="button" ion-button block>Logout</button>
+  </form>
 </ion-content>
